Se empieza a crear las primeras secciones de about

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.scroll-invisible {
+  overflow-y: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
+.scroll-invisible::-webkit-scrollbar {
+  display: none; /* Chrome/Safari/Webkit */
+}
