Se agrega mas seccion sobre educacion , experiencia, servicios que ofresco y mis intereses

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,43 @@
 .scroll-invisible::-webkit-scrollbar {
   display: none; /* Chrome/Safari/Webkit */
 }
+.service-card-wrap {
+  background-color: #fff;
+  border: 2px solid #e5e5e5;
+  border-radius: 0;
+  display: block;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  padding: 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  z-index: 0;
+  transition: background 0.3s;
+}
+.service-card-wrap:hover, .service-card-wrap:focus {
+  background: #000;
+}
+.service-card-wrap::before {
+  background: #000;
+  content: "";
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: scale(1);
+  transform-origin: top right;
+  transition: transform .6s cubic-bezier(.4,0,.2,1);
+  z-index: 1;
+  clip-path: polygon(100% 0, 0 0, 100% 100%);
+}
+@media (max-width: 1199px) {
+  .service-card-wrap::before {
+    width: 47px;
+  }
+}
+.service-card-wrap:hover::before, .service-card-wrap:focus::before {
+  transform: scale(12);
+}
